--- a/utils/workspace.ipynb
+++ b/utils/workspace.ipynb
@@ -50,6 +50,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_sql_query('select * from forums', con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
@@ -134,6 +152,13 @@
     "\n",
     "fetch_all_posts_in_a_pt_thread('http://www.proteacher.net/discussions/showthread.php?t=656293')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
